# stl-rust

./: Cargo.toml
.github/workflows/: python.yml
benches/: co2.rs
pystl/: Cargo.toml  pyproject.toml
pystl/.github/workflows/: CI.yml
pystl/src/: lib.rs
src/: lib.rs  mstl.rs  params.rs  stl.rs
