[package]
name = "stlrs"
version = "0.2.1"
description = "Seasonal-trend decomposition for Rust"
repository = "https://github.com/ankane/stl-rust"
license = "Unlicense OR MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph", "frame-pointer", "prost-codec"] }

[[bench]]
name = "co2"
harness = false

