[package]
name = "pystl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pystl"
crate-type = ["cdylib"]

[dependencies]
stlrs = { path = ".." }
pyo3 = { version = "0.18.1", features = ["extension-module"] }
numpy = "0.18.0"
